--- a/package.json
+++ b/package.json
@@ -20,28 +20,33 @@
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^11.2.0",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "apexcharts": "^3.24.0",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
+    "ng-apexcharts": "^1.5.7",
     "ngx-avatar": "^4.0.0",
     "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^11.3.3",
     "rxjs": "~6.4.0",
+    "saturn-datepicker": "^8.0.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "~8.3.20",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -54,5 +59,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
   }
 }
